# OpenPIL

./: ._README.md  .__config.yml  ._index.html  ._js  ._requirements_dev.txt  ._setup.cfg  ._setup.py  ._sitemap.xml  .gitignore  OpenPILAI2.0.py  OpenPILAIC.c  README.md  index.html  index.md  requirements_dev.txt  setup.cfg  setup.py  styles.css
OpenPIL/: OpenPIL.py  OpenPIL_Malik_Similarity_Algorithm.c  drugClassDataset.py  drugClassSynonymDataset.py  drugNameDataset.py  greekAlphabet.py  libfun.dylib
OpenPIL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
OpenPIL_AI/: ._OpenPIL_AI.py  .___init__.py  OpenPIL_AI.py
assets/img/: ._mada.webm
css/: ._styles.css  styles.css
