[metadata]
name = OpenPIL
version = 2.0.1
author = Malik Ahmed
author_email = malik@openpil.org
description = Still writing this.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenPIL/OpenPIL
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: C
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    
    
[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    PyPDF2
    pdftotext
    nltk