[metadata]
name = OpenPIL
version = 2.0.2
author = Malik Ahmed
author_email = malik@openpil.org
description = OpenPIL AI extracts information on active-ingredients, drug-drug interactions and cautions from Summary of Product Characteristic (European format) documentation. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenPIL/OpenPIL
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: C
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    
    
[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    PyPDF2
    pdftotext
    nltk